prop box is reduced in size. font of app is set. creae_new_shape toolbutton pops up while shape creation starts up.

--- a/editor/src/settings/main_style.css
+++ b/editor/src/settings/main_style.css
@@ -1,3 +1,22 @@
+GtkBox * {
+   font-size: 10;
+}
+
+#propbox * {
+  padding-bottom:0px;
+  padding-top:0px;
+  margin:0px;
+}
+
+GtkLabel text {
+    background-color:#ffffff;
+    color: #123456;
+}
+
+GtkWindow GtkLabel {
+  background-color: #898989
+}
+
 .pane-separator{
     border-radius: 2px;
     border-width:1px;
