--- a/android/MotionPicture/app/src/main/res/layout/activity_open_gl.xml
+++ b/android/MotionPicture/app/src/main/res/layout/activity_open_gl.xml
@@ -10,18 +10,32 @@
     tools:context="bk2suz.motionpicture.OpenGLActivity"
     android:orientation="vertical">
 
+    <SeekBar
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:id="@+id/seekBarObjectRotateX" />
+    <SeekBar
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:id="@+id/seekBarObjectRotateY" />
+    <SeekBar
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:id="@+id/seekBarObjectRotateZ" />
+
     <bk2suz.motionpicture.ThreeDSurfaceView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:id="@+id/view"
+        android:id="@+id/surfaceView1"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_weight="1" />
     <bk2suz.motionpicture.ThreeDSurfaceView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:id="@+id/view2"
+        android:id="@+id/surfaceView2"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_weight="1" />
+
 </LinearLayout>
