--- a/android/MotionPicture/app/src/main/res/layout/activity_open_gl.xml
+++ b/android/MotionPicture/app/src/main/res/layout/activity_open_gl.xml
@@ -23,14 +23,14 @@
         android:layout_height="25dp"
         android:id="@+id/seekBarObjectRotateZ" />
 
-    <bk2suz.motionpicture.ThreeDSurfaceView
+    <bk2suz.motionpicturelib.ThreeDSurfaceView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/surfaceView1"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_weight="1" />
-    <bk2suz.motionpicture.ThreeDSurfaceView
+    <bk2suz.motionpicturelib.ThreeDSurfaceView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/surfaceView2"
