--- a/android/MotionPicture/app/src/main/res/layout/activity_open_gl.xml
+++ b/android/MotionPicture/app/src/main/res/layout/activity_open_gl.xml
@@ -30,6 +30,12 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_weight="1" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/imageView"
+        android:layout_weight="1" />
     <!--
     <bk2suz.motionpicturelib.ThreeDSurfaceView
         android:layout_width="match_parent"
